debug likert